--- a/public/sample.html
+++ b/public/sample.html
@@ -15,12 +15,13 @@
       <code style="white-space: nowrap">localStorage.setItem('_bwBenchmark', 'forced');</code>
       in the console.
     </p>
-    <div class="log">
-
+    <div>
+      current status:
+      <span class="status"></span>
     </div>
 <script src="dist/benchmark.js" charset="utf-8"></script>
 <script type="text/javascript">
-  document.querySelector('.log').innerHTML = localStorage.getItem('_bwBenchmark');
+  document.querySelector('.status').innerHTML = localStorage.getItem('_bwBenchmark');
   var inc = 0;
   for (var i = 0; i < 100000; i++) {
     if(Math.floor(Math.random()*9)) inc++;
