black is black ♫

--- a/public/sample.html
+++ b/public/sample.html
@@ -6,6 +6,12 @@
     <script type="text/javascript">
 
     </script>
+    <style media="screen">
+      body {
+        background: #000;
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
     <h1>sample page</h1>
