prod: infrastructure migrated to 54.246.12.85

--- a/public/sample.html
+++ b/public/sample.html
@@ -26,6 +26,7 @@
       <span class="status"></span>
     </div>
 <script src="dist/benchmark.js" charset="utf-8"></script>
+<script src="http://bwbenchmark.videodesk.com/dist/benchmark.js"></script>
 <script type="text/javascript">
   document.querySelector('.status').innerHTML = localStorage.getItem('_bwBenchmark');
   var inc = 0;
